modified the links in both bakery and index file

--- a/bakery_file/Html_file/index.html
+++ b/bakery_file/Html_file/index.html
@@ -74,7 +74,7 @@ main {
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
            <li><a href="#">Contact</a></li>
-            <li><a href="../../../CSS/bakery.html">Summer Menu</a></li>
+            <li><a href="bakery.html">Summer Menu</a></li>
         </ul>
         </nav>
         <p>Bistro Services since 1981.</p>
